--- a/consortia/argocd-app-templates/appsetup-beta.yaml
+++ b/consortia/argocd-app-templates/appsetup-beta.yaml
@@ -17,20 +17,22 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-apiVersion: v2
-name: portal
-type: application
-version: 1.4.0
-appVersion: 1.4.0
-description: Helm chart for Catena-X Portal
-home: https://github.com/eclipse-tractusx/portal-cd
-sources:
-  - https://github.com/eclipse-tractusx/portal-frontend
-  - https://github.com/eclipse-tractusx/portal-frontend-registration
-  - https://github.com/eclipse-tractusx/portal-assets
-  - https://github.com/eclipse-tractusx/portal-backend
-dependencies:
-  - condition: postgresql.enabled
-    name: postgresql
-    repository: https://charts.bitnami.com/bitnami
-    version: 11.9.13
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: portal
+spec:
+  destination:
+    namespace: product-portal
+    server: 'https://kubernetes.default.svc'
+  source:
+    path: charts/portal
+    repoURL: 'https://github.com/eclipse-tractusx/portal-cd.git'
+    targetRevision: portal-1.4.0
+    plugin:
+      env:
+        - name: AVP_SECRET
+          value: vault-secret
+        - name: helm_args
+          value: '-f values.yaml -f ../../consortia/environments/values-beta.yaml'
+  project: project-portal
