--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -591,6 +591,8 @@ postgresql:
     pgAuditLog: "write, ddl"
     logLinePrefix: "%m %u %d "
   primary:
+    extendedConfiguration: |
+      max_connections = 400
     initdb:
       scriptsConfigMap: "configmap-postgres-init"
     extraEnvVars:
