chore(db-dependency): increase max_connections

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -606,6 +606,9 @@ postgresql:
           secretKeyRef:
             name: "{{ .Values.auth.existingSecret }}"
             key: "provisioning-password"
+  readReplicas:
+    extendedConfiguration: |
+      max_connections = 200
 
 
 externalDatabase:
