--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -591,6 +591,8 @@ postgresql:
     pgAuditLog: "write, ddl"
     logLinePrefix: "%m %u %d "
   primary:
+    extendedConfiguration: |
+      max_connections = 200
     initdb:
       scriptsConfigMap: "configmap-postgres-init"
     extraEnvVars:
@@ -604,6 +606,9 @@ postgresql:
           secretKeyRef:
             name: "{{ .Values.auth.existingSecret }}"
             key: "provisioning-password"
+  readReplicas:
+    extendedConfiguration: |
+      max_connections = 200
 
 
 externalDatabase:
