chore(db-dep): move max_conn increase to consortia limit increase of maximum number of connections for database dependency to consortia environments to avoid issues at upgrade

--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -226,3 +226,9 @@ postgresql:
     replicationPassword: "<path:portal/data/dev/postgres#replication-password>"
     portalPassword: "<path:portal/data/dev/postgres#portal-password>"
     provisioningPassword: "<path:portal/data/dev/postgres#provisioning-password>"
+  primary:
+    extendedConfiguration: |
+      max_connections = 200
+  readReplicas:
+    extendedConfiguration: |
+      max_connections = 200
