--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -227,3 +227,9 @@ postgresql:
     replicationPassword: "<path:portal/data/pen/postgres#replication-password>"
     portalPassword: "<path:portal/data/pen/postgres#portal-password>"
     provisioningPassword: "<path:portal/data/pen/postgres#provisioning-password>"
+  primary:
+    extendedConfiguration: |
+      max_connections = 200
+  readReplicas:
+    extendedConfiguration: |
+      max_connections = 200
