--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -591,6 +591,8 @@ postgresql:
     pgAuditLog: "write, ddl"
     logLinePrefix: "%m %u %d "
   primary:
+    # -- Extended PostgreSQL Primary configuration (increase of max_connections recommended - default is 100)
+    extendedConfiguration: ""
     initdb:
       scriptsConfigMap: "configmap-postgres-init"
     extraEnvVars:
@@ -604,6 +606,9 @@ postgresql:
           secretKeyRef:
             name: "{{ .Values.auth.existingSecret }}"
             key: "provisioning-password"
+  readReplicas:
+  # -- Extended PostgreSQL read only replicas configuration (increase of max_connections recommended - default is 100)
+    extendedConfiguration: ""
 
 externalDatabase:
 # -- External PostgreSQL configuration
