--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -19,6 +19,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Kubernetes KinD Cluster
+        uses: container-tools/kind-action@v1
+
       - name: Set up Helm
         uses: azure/setup-helm@v3
         with:
@@ -27,7 +30,8 @@ jobs:
       # Setup python as a prerequisite for chart linting 
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          python-version: '3.9'
+          check-latest: true
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
@@ -43,11 +47,6 @@ jobs:
       # run chart linting 
       - name: Run chart-testing (lint)
         run: ct lint --charts charts/portal --config charts/chart-testing-config.yaml
-
-      # Preparing a kind cluster to install and test charts on
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.4.0
-        # if: steps.list-changed.outputs.changed == 'true'
 
       # install the chart to the kind cluster and run helm test
       # define charts to test with the --charts parameter
