--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Kubernetes KinD Cluster
         uses: container-tools/kind-action@v2
+        with:
+          node-image: v1.27.2
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
