--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Kubernetes KinD Cluster
         uses: container-tools/kind-action@v2
         with:
+          version: v0.19.0
           node_image: kindest/node:v1.25.3
 
       - name: Set up Helm
