--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -9,6 +9,13 @@ on:
     paths:
       - 'charts/portal/**'
   workflow_dispatch:
+    inputs:
+      node_image:
+        description: 'kindest/node image for k8s kind cluster'
+        # k8s version from 3.1 release
+        default: 'kindest/node:v1.24.6'
+        required: false
+        type: string
 
 jobs:
   lint-test:
@@ -23,7 +30,7 @@ jobs:
         uses: container-tools/kind-action@v2
         with:
           version: v0.19.0
-          node_image: kindest/node:v1.24.6
+          node_image: ${{ github.event.inputs.node_image }}
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
