chore: edit description
Refs: CPLP-2344

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -212,7 +212,7 @@ backend:
     # -- Password for the smtp username. Secret-key 'password'.
     password: ""
   interfaces:
-    # -- Secret containing the client-secrets for the connection to daps, custodian, bpdm, sdFactory, clearinghouse and the offer provider.
+    # -- Secret containing the client-secrets for the connection to daps, custodian, bpdm, sdFactory, clearinghouse and offer provider.
     secret: "secret-backend-interfaces"
   healthChecks:
     startup:
