--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: container-tools/kind-action@v2
         with:
           version: v0.19.0
-          node_image: ${{ github.event.inputs.node_image }}
+          node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.24.6' }}
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
@@ -75,7 +75,7 @@ jobs:
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-          helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from }}
+          helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from || '1.3.0' }}
           helm dependency update charts/portal
           helm upgrade portal charts/portal
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
