chore: align offerprovider name
Refs: CPLP-2344

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -251,22 +251,22 @@ spec:
             - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__Cl2-CX-Portal__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.itAdminRoles.role0 }}"
             - name: "OFFERPROVIDER__SERVICEMANAGERROLES__Cl2-CX-Portal__0"
-              value: "{{ .Values.backend.processesworker.offerProvider.serviceManagerRoles.role0 }}"
+              value: "{{ .Values.backend.processesworker.offerprovider.serviceManagerRoles.role0 }}"
             - name: "OFFERPROVIDER__CLIENTID"
-              value: "{{ .Values.backend.processesworker.offerProvider.clientId }}"
+              value: "{{ .Values.backend.processesworker.offerprovider.clientId }}"
             - name: "OFFERPROVIDER__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "offerprovider-client-secret"
             - name: "OFFERPROVIDER__GRANTTYPE"
-              value: "{{ .Values.backend.processesworker.offerProvider.grantType }}"
+              value: "{{ .Values.backend.processesworker.offerprovider.grantType }}"
             - name: "OFFERPROVIDER__KEYCLOAKTOKENADDRESS"
               value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "OFFERPROVIDER__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "OFFERPROVIDER__SCOPE"
-              value: "{{ .Values.backend.processesworker.offerProvider.scope }}"
+              value: "{{ .Values.backend.processesworker.offerprovider.scope }}"
             - name: "OFFERPROVIDER__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
             ports:
