--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -566,14 +566,14 @@ backend:
         role0: "App Manager"
       itAdminRoles:
         role0: "IT Admin"
-    offerProvider:
+    offerprovider:
       serviceManagerRoles:
         role0: "App Manager"
       scope: "openid"
       grantType: "client_credentials"
       # -- Provide offer-provider client-id from CX IAM centralidp.
       clientId: "offerprovider-client-id"
-      # -- Client-secret for offer provider client-id. Secret-key 'offer-provider-client-secret'.
+      # -- Client-secret for offer provider client-id. Secret-key 'offerprovider-client-secret'.
       clientSecret: ""
   placeholder: "empty"
 
