--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -35,7 +35,7 @@ data:
   custodian-client-secret: {{ ( .Values.backend.processesworker.custodian.clientSecret | b64enc ) | default ( index $secret.data "custodian-client-secret" ) }}
   sdfactory-client-secret: {{ ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc ) | default ( index $secret.data "sdfactory-client-secret" ) }}
   daps-client-secret: {{ ( .Values.backend.administration.daps.clientSecret | b64enc ) | default ( index $secret.data "daps-client-secret" ) }}
-  offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerProvider.clientSecret | b64enc ) | default ( index $secret.data "offer-provider-secret" ) }}
+  offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc ) | default ( index $secret.data "offer-provider-secret" ) }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
@@ -44,5 +44,5 @@ stringData:
   custodian-client-secret: {{ .Values.backend.processesworker.custodian.clientSecret | default ( randAlphaNum 32 | quote ) }}
   sdfactory-client-secret: {{ .Values.backend.processesworker.sdfactory.clientSecret | default ( randAlphaNum 32 | quote ) }}
   daps-client-secret: {{ .Values.backend.administration.daps.clientSecret | default ( randAlphaNum 32 | quote ) }}
-  offerprovider-client-secret: {{ .Values.backend.processesworker.offerProvider.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  offerprovider-client-secret: {{ .Values.backend.processesworker.offerprovider.clientSecret | default ( randAlphaNum 32 | quote ) }}
 {{ end }}
