fix: offer-provider secret naming
Refs: CPLP-2344

--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -35,7 +35,7 @@ data:
   custodian-client-secret: {{ ( .Values.backend.processesworker.custodian.clientSecret | b64enc ) | default ( index $secret.data "custodian-client-secret" ) }}
   sdfactory-client-secret: {{ ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc ) | default ( index $secret.data "sdfactory-client-secret" ) }}
   daps-client-secret: {{ ( .Values.backend.administration.daps.clientSecret | b64enc ) | default ( index $secret.data "daps-client-secret" ) }}
-  offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc ) | default ( index $secret.data "offer-provider-secret" ) }}
+  offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc ) | default ( index $secret.data "offerprovider-secret" ) }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
