feat(config): change config values to enable case insensitive config
the backend has enabled a case insensitive configuration within the config keys
to support the new config some config values has been changed

Refs: CPLP-2643

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -72,13 +72,17 @@ spec:
             - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
               value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
             {{- end }}
-            - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__Cl2-CX-Portal__0"
+            - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.portal }}"
+            - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.applicationApprovalInitialRoles.portal.role0 }}"
             - name: "APPLICATIONACTIVATION__CLIENTTOREMOVEROLESONACTIVATION__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.clientToRemoveRolesOnActivation.client0 }}"
             - name: "APPLICATIONACTIVATION__BASEPORTALADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
-            - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__Cl1-CX-Registration__0"
+            - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.registration }}"
+            - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.applicationApprovalInitialRoles.registration.role0 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type0 }}"
@@ -223,7 +227,9 @@ spec:
               value: "{{ .Values.backend.provisioning.centralRealm }}"
             - name: "PROVISIONING__CENTRALREALMID"
               value: "{{ .Values.backend.provisioning.centralRealmId }}"
-            - name: "PROVISIONING__INVITEDUSERINITIALROLES__Cl1-CX-Registration__0"
+            - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.registration }}"
+            - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
             - name: "PROVISIONING__SHAREDREALM__SMTPSERVER__AUTH"
               value: "{{ .Values.backend.provisioning.sharedRealm.smtpServer.auth }}"
@@ -248,13 +254,21 @@ spec:
               value: "{{ .Values.backend.provisioning.sharedRealmClient.clientId }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__BASEPORTALADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
-            - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEACCOUNTROLES__technical_roles_management__0"
+            - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEACCOUNTROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.technicalRolesManagement }}"
+            - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEACCOUNTROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.serviceAccountRoles.role0 }}"
-            - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEMANAGERROLES__Cl2-CX-Portal__0"
+            - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEMANAGERROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.portal }}"
+            - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEMANAGERROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.serviceManagerRoles.role0 }}"
-            - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__Cl2-CX-Portal__0"
+            - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.portal }}"
+            - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.itAdminRoles.role0 }}"
-            - name: "OFFERPROVIDER__SERVICEMANAGERROLES__Cl2-CX-Portal__0"
+            - name: "OFFERPROVIDER__SERVICEMANAGERROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.portal }}"
+            - name: "OFFERPROVIDER__SERVICEMANAGERROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerprovider.serviceManagerRoles.role0 }}"
             - name: "OFFERPROVIDER__CLIENTID"
               value: "{{ .Values.backend.processesworker.offerprovider.clientId }}"
