--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -76,9 +76,11 @@ spec:
         - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
           value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
           {{- end }}
-        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.activeAppCompanyAdminRoles.role0 }}"
-        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__Cl2-CX-Portal__1"
+        - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.appmarketplace.activeAppCompanyAdminRoles.role1 }}"
         - name: "APPMARKETPLACE__ACTIVEAPPNOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.activeAppNotificationTypeIds.type0 }}"
@@ -98,35 +100,51 @@ spec:
           value: "{{ .Values.portalAddress }}{{ .Values.backend.appmarketplace.appOverviewPath }}"
         - name: "APPMARKETPLACE__APPROVEAPPNOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.approveAppNotificationTypeIds.type0 }}"
-        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role0 }}"
-        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__Cl2-CX-Portal__1"
+        - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role1 }}"
         - name: "APPMARKETPLACE__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
         - name: "APPMARKETPLACE__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
-        - name: "APPMARKETPLACE__CATENAADMINROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__CATENAADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__CATENAADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.catenaAdminRoles.role0 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_CONTRACT__0"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type2 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__0__MEDIATYPES__0"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__ADDITIONAL_DETAILS__0"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__1__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type3 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__0"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_TECHNICAL_INFORMATION__0"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__2__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type4 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__2__MEDIATYPES__0"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_LEADIMAGE__0"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type0 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__MEDIATYPES__0"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting1 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_LEADIMAGE__1"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__MEDIATYPES__1"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting2 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_LEADIMAGE__2"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting3 }}"  
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_IMAGE__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting1 }}" 
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_IMAGE__1"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting2 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__APP_IMAGE__2"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__MEDIATYPES__2"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting3 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__CONFORMITY_APPROVAL_BUSINESS_APPS__0"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type1 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__MEDIATYPES__0"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting1 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__MEDIATYPES__1"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting2 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__MEDIATYPES__2"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting3 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__5__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type5 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__5__MEDIATYPES__0"
           value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
         - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type0 }}"
@@ -146,7 +164,9 @@ spec:
           value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type1 }}"
         - name: "APPMARKETPLACE__SUBMITAPPDOCUMENTTYPEIDS__2"
           value: "{{ .Values.backend.appmarketplace.submitAppDocumentTypeIds.type2 }}"
-        - name: "APPMARKETPLACE__ITADMINROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__ITADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__ITADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.ITAdminRoles.role0 }}"
         - name: "APPMARKETPLACE__NOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.notificationTypeIds.type0 }}"
@@ -154,17 +174,25 @@ spec:
           value: "{{ .Values.backend.appmarketplace.offerStatusIds.status0 }}"
         - name: "APPMARKETPLACE__OFFERSTATUSIDS__1"
           value: "{{ .Values.backend.appmarketplace.offerStatusIds.status1 }}"
-        - name: "APPMARKETPLACE__SALESMANAGERROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__SALESMANAGERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__SALESMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.salesManagerRoles.role0 }}"
-        - name: "APPMARKETPLACE__SERVICEACCOUNTROLES__technical_roles_management__0"
+        - name: "APPMARKETPLACE__SERVICEACCOUNTROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.technicalRolesManagement }}"
+        - name: "APPMARKETPLACE__SERVICEACCOUNTROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.serviceAccountRoles.role0 }}"
-        - name: "APPMARKETPLACE__SERVICEMANAGERROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.serviceManagerRoles.role0 }}"
         - name: "APPMARKETPLACE__SUBMITAPPNOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.submitAppNotificationTypeIds.type0 }}"
         - name: "APPMARKETPLACE__TECHNICALUSERPROFILECLIENT"
           value: "{{ .Values.backend.appmarketplace.technicalUserProfileClient }}"
-        - name: "APPMARKETPLACE__COMPANYADMINROLES__Cl2-CX-Portal__0"
+        - name: "APPMARKETPLACE__COMPANYADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__COMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.companyAdminRoles.role0 }}"
         - name: "HEALTHCHECKS__0__PATH"
           value: "{{ .Values.backend.healthChecks.startup.path}}"
