--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -138,7 +138,9 @@ spec:
           value: "{{ .Values.backend.mailing.user }}"
         - name: "PROVISIONING__CENTRALREALM"
           value: "{{ .Values.backend.provisioning.centralRealm }}"
-        - name: "PROVISIONING__INVITEDUSERINITIALROLES__Cl1-CX-Registration__0"
+        - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.registration }}"
+        - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
         - name: "PROVISIONING__SERVICEACCOUNTCLIENTPREFIX"
           value: "{{ .Values.backend.provisioning.serviceAccountClientPrefix }}"
