--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -134,31 +134,47 @@ spec:
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
         - name: "SERVICES__APPROVESERVICENOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.services.approveServiceNotificationTypeIds.type0 }}"
-        - name: "SERVICES__APPROVESERVICEUSERROLES__Cl2-CX-Portal__0"
+        - name: "SERVICES__APPROVESERVICEUSERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__APPROVESERVICEUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.approveServiceUserRoles.role0 }}"
-        - name: "SERVICES__APPROVESERVICEUSERROLES__Cl2-CX-Portal__1"
-          value:  "{{ .Values.backend.services.approveServiceUserRoles.role1 }}"
+        - name: "SERVICES__APPROVESERVICEUSERROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.services.approveServiceUserRoles.role1 }}"
         - name: "SERVICES__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
         - name: "SERVICES__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
-        - name: "SERVICES__CATENAADMINROLES__Cl2-CX-Portal__0"
+        - name: "SERVICES__CATENAADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__CATENAADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.catenaAdminRoles.role0 }}"
-        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__ADDITIONAL_DETAILS__0"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type0 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__0__MEDIATYPES__0"
           value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting0 }}"
-        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__SERVICE_LEADIMAGE__0"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.appmarketplace.type2 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__MEDIATYPES__0"
           value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting1 }}"
-        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__SERVICE_LEADIMAGE__1"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__MEDIATYPES__1"
           value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting2 }}"
-        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__SERVICE_LEADIMAGE__2"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__MEDIATYPES__2"
           value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting3 }}"
-        - name: "SERVICES__ITADMINROLES__Cl2-CX-Portal__0"
+        - name: "SERVICES__ITADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__ITADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.ITAdminRoles.role0 }}"
-        - name: "SERVICES__SALESMANAGERROLES__Cl2-CX-Portal__0"
+        - name: "SERVICES__SALESMANAGERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__SALESMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.salesManagerRoles.role0 }}"
-        - name: "SERVICES__SERVICEACCOUNTROLES__technical_roles_management__0"
+        - name: "SERVICES__SERVICEACCOUNTROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.technicalRolesManagement }}"
+        - name: "SERVICES__SERVICEACCOUNTROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.serviceAccountRoles.role0 }}"
-        - name: "SERVICES__SERVICEMANAGERROLES__Cl2-CX-Portal__0"
+        - name: "SERVICES__SERVICEMANAGERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.serviceManagerRoles.role0 }}"
         - name: "SERVICES__SERVICEMARKETPLACEADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.services.serviceMarketplacePath }}"
@@ -182,7 +198,9 @@ spec:
           value: "{{ .Values.backend.services.deleteDocumentTypeIds.type1 }}"
         - name: "SERVICES__TECHNICALUSERPROFILECLIENT"
           value: "{{ .Values.backend.services.technicalUserProfileClient }}"
-        - name: "SERVICES__COMPANYADMINROLES__Cl2-CX-Portal__0"
+        - name: "SERVICES__COMPANYADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__COMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.companyAdminRoles.role0 }}"
         ports:
         - name: http
