--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -235,7 +235,9 @@ spec:
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.headerUserId }}"
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__SEPARATOR"
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.separator }}"
-        - name: "INVITATION__INVITEDUSERINITIALROLES__Cl1-CX-Registration__0"
+        - name: "INVITATION__INVITEDUSERINITIALROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.registration }}"
+        - name: "INVITATION__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.invitation.invitedUserInitialRoles.role0 }}"
         - name: "INVITATION__REGISTRATIONAPPADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
@@ -292,7 +294,9 @@ spec:
           value: "{{ .Values.backend.provisioning.centralRealm }}"
         - name: "PROVISIONING__CENTRALREALMID"
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
-        - name: "PROVISIONING__INVITEDUSERINITIALROLES__Cl1-CX-Registration__0"
+        - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.registration }}"
+        - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
         - name: "PROVISIONING__SHAREDREALM__SMTPSERVER__AUTH"
           value: "{{ .Values.backend.provisioning.sharedRealm.smtpServer.auth }}"
@@ -325,9 +329,11 @@ spec:
           value: "{{ .Values.backend.administration.userManagement.companyUserStatusIds.status0 }}"
         - name: "USERMANAGEMENT__COMPANYUSERSTATUSIDS__1"
           value: "{{ .Values.backend.administration.userManagement.companyUserStatusIds.status1 }}"
-        - name: "USERMANAGEMENT__USERADMINROLES__Cl2-CX-Portal__0"
+        - name: "USERMANAGEMENT__USERADMINROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "USERMANAGEMENT__USERADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.userManagement.userAdminRoles.role0 }}"
-        - name: "USERMANAGEMENT__USERADMINROLES__Cl2-CX-Portal__1"
+        - name: "USERMANAGEMENT__USERADMINROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.administration.userManagement.userAdminRoles.role1 }}"
         - name: "USERMANAGEMENT__PORTAL__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
