--- a/charts/portal/Chart.yaml
+++ b/charts/portal/Chart.yaml
@@ -20,8 +20,8 @@
 apiVersion: v2
 name: portal
 type: application
-version: 1.4.0
-appVersion: 1.4.0
+version: 1.5.0-RC1
+appVersion: 1.5.0-RC1
 description: Helm chart for Catena-X Portal
 home: https://github.com/eclipse-tractusx/portal-cd
 sources:
